# Clander

./: .gitignore  CMakeLists.txt
Resources/Levels/eloi/: entities.json  map.txt
Resources/Levels/parkour/: entities.json
Resources/Levels/test/: entities.json  map.txt
Wanderer/: Constants.hpp  Game.hpp
Wanderer-pre-release/: README.md  README.txt  imgui.ini  imgui.lib
Wanderer-pre-release/Resources/Levels/parkour/: entities.json  map.txt
Wanderer-pre-release/Resources/Levels/test/: entities.json
Wanderer-pre-release/Resources/Textures/: entitiesData.json  tilesData.json
Wanderer-pre-release/Wanderer-sources/: Constants.hpp
Wanderer-pre-release/Wanderer-sources/Editor/: MapEditor.cpp
Wanderer-pre-release/Wanderer-sources/Entity/: Animation.hpp  Character.cpp  Character.hpp  Enemy.cpp  MovingCharacter.cpp  MovingCharacter.hpp  MovingGameObject.hpp
Wanderer-pre-release/Wanderer-sources/Scene/: GameScene.hpp  SceneManager.cpp  TilesManager.hpp
Wanderer-pre-release/Wanderer-sources/Utility/: util.hpp
Wanderer/Editor/: MapEditor.hpp
Wanderer/Entity/: AnimatedGameObject.hpp  Character.cpp  Character.hpp  GameObject.hpp  MovingCharacter.cpp  MovingCharacter.hpp  Player.hpp  WalkingState.hpp
Wanderer/Scene/: Background.hpp  GameScene.cpp  Layer.cpp  Layer.hpp  Map.cpp  Map.hpp  Scene.hpp  Tile.hpp
Wanderer/Utility/: Box.cpp  Box.hpp
